--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup"
+    "test": "vitest",
+    "build": "tsup",
+    "generate": "openapi-typescript http://127.0.0.1:8080/openapi.json -o ./src/schema.d.ts"
   },
   "files": ["./dist/**"],
   "author": "Jonas Hiltl <jonas@throttled.dev>",
   "license": "MIT",
   "keywords": ["throttled", "ratelimit", "quota", "usage-metering"],
   "devDependencies": {
+    "openapi-typescript": "^6.7.5",
     "tsup": "^8.0.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^1.5.0"
+  },
+  "dependencies": {
+    "openapi-fetch": "^0.9.3"
   }
 }
